End of Section 3

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "AppSettings" : {
+    "Token": "super secret key"
+  },
+
   "connectionStrings": {
     "DefaultConnection": "Data Source=datingapp.db"
   },
